package dev.joshuaonyema.kaleo.domain;

public enum ProgramStatus {
    DRAFT,
    PUBLISHED,
    CANCELLED,
    COMPLETED
}
