package dev.joshuaonyema.kaleo.domain;

public enum QrCodeStatus {
    ACTIVE,
    EXPIRED
}
